<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Demo App</string>

    <string name="label_profile">Thông tin cá nhân</string>
    <string name="label_full_name">Họ tên:</string>
    <string name="label_identity_card_number">CMND:</string>

    <string name="label_degree">Bằng cấp</string>
    <string name="radio_university">Đại học</string>
    <string name="radio_college">Cao đẳng</string>
    <string name="radio_intermediate">Trung cấp</string>

    <string name="label_given">Sở thích</string>
    <string name="checkbox_read_news">Đọc báo</string>
    <string name="checkbox_read_books">Đọc sách</string>
    <string name="checkbox_read_codes">Đọc coding</string>

    <string name="label_provider_info">Thông tin bổ sung</string>

    <string name="button_send_info">Gửi thông tin</string>
</resources>
